<resources>
    <string name="app_name">MvpBased</string>

    <string name="uno">UNO</string>
    <string name="dos">DOS</string>
    <string name="tres">TRES</string>
    <string name="cuatro">CUATRO</string>
    <string name="cinco">CINCO</string>
    <string name="seis">SEIS</string>

    <string name="settings">Settings</string>
    <string name="image_converter">Image Converter</string>
    <string name="music_converter">MP3 Converter</string>
    <string name="video_converter">Video Converter</string>
    <string name="pdf_converter">PDF Converter</string>
    <string name="pdfconverter">PDF Converter</string>

    <string name="scanner_translator">Scanner Translator</string>
    <string name="camera_translator">Camera Translator</string>
    <string name="triple_translator">Triple Translator</string>

    <string name="scanner_pdf">Scanner PDF</string>
    <string name="translate">Translate</string>
    <string name="general">General</string>
    <string name="default_directory">Default directory</string>
    <string name="about">About</string>
    <string name="more_app">More Apps</string>
    <string name="website">Website</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="more_app_link" translatable="false">http://play.google.com/store/search?q=pub:Tick Talk Soft</string>
    <string name="website_link" translatable="false">http://www.ticktalksoft.com</string>
    <string name="contact_us_link" translatable="false">infoticksoft@yahoo.com</string>
    <string name="privacy_policy_link" translatable="false">http://www.ticktalksoft.com/policy/</string>
    <string name="camera_translator_package" translatable="false">com.ticktalk.cameratranslator</string>
    <string name="triple_translator_package" translatable="false">com.ticktalk.tipletranslator</string>
    <string name="pdfconverter_package" translatable="false">com.ticktalk.pdfconverter</string>
    <string name="musicconverter_package" translatable="false">com.ticktalk.musicconverter</string>
    <string name="imageconverter_package" translatable="false">com.ticktalk.imageconverter</string>
    <string name="videoconverter_package" translatable="false">com.ticktalk.videoconverter</string>
    <string name="scanner_package" translatable="false">com.ticktalk.scannerdocument</string>

    <string name="free_camera_info">If you want to use translator function, please download Camera Translator.</string>
    <string name="free_scanner_info">If you want to use scanner function, please download Scanner PDF.</string>

    <string name="free_recommended_apps">Free Recommended Apps</string>
    <string name="free_recommended_apps_info">To access more function, it is highly recommended to download the free apps.</string>
    <string name="free_recommended_app_info">To access more function, it is highly recommended to download the free app.</string>
    <string name="download_now">Download Now!</string>
    <string name="download_free">Download Free!</string>
    <string name="more_functions">More Functions!</string>
    <string name="download">Download</string>

    <string name="scanner_document">Scanner PDF</string>
    <string name="scanner_document_n">Scanner\nPDF</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="Rate">Rate this app</string>
    <string name="Ratesimple">Rate</string>
    <string name="Exit">Are You Sure You Want To Quit?</string>

    <string name="deny_permission_advice">It seems like you have denied our permission request, however you can grant it again in app setting</string>
    <string name="go_to_app_setting">Go to App Setting</string>

    <string name="preview">Preview</string>
    <string name="share">Share</string>
    <string name="convert">Convert</string>
    <string name="rename">Rename</string>
    <string name="name_is_taken">This name is already taken</string>
    <string name="please_enter_output_name">Please enter output name</string>
    <string name="name_is_taken_select_new_name">&lt;b>\"%1s\"&lt;/b> is already taken, please choose new name</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>

    <string name="open_with">Open with</string>
    <string name="share_to">Share to</string>


    <string name="are_you_sure">Are you sure?</string>
    <string name="will_be_delete"> &lt;b>\"%1s\"&lt;/b> will be removed from history</string>
    <string name="is_completed">is completed.</string>
    <string name="delete_file_from_device">Also delete this file from device</string>
    <string name="convert_files"> Convert Files</string>
</resources>
